<resources>
    <string name="app_name">DriveCure</string>
    <string name="nova_entrega">Nova Entrega</string>
    <string name="entregas">Entregas</string>
    <string name="funcionarios">Funcionarios</string>
    <string name="addfuncionarios"> Novo Funcionario </string>
    <string name="updatefuncionario"> Editar </string>
    <string name="deletefuncionario"> Eliminar </string>
    <string name="adicionarfuncionario"> Adicionar </string>
    <string name="Descrição">Descrição do produto</string>
    <string name="Contacto">Contacto telefónico</string>
    <string name="Nome">Nome</string>
    <string name="Clientes">Clientes</string>

</resources>
